--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       <div id="sidebar">
         
       </div>
-      <textarea id="note"></textarea>
+      <div id="note" contenteditable="true">
+      </div>
     </div>
   </body>
 </html>
